--- a/nakano/index.html
+++ b/nakano/index.html
@@ -401,7 +401,10 @@
     /* === Mobile fixes: stop overlap between hero and first card === */
     @media (max-width: 640px) {
 
-      
+      /* ヒーローを少し高く＆余白を増やす */
+      header {
+        padding: 1rem;
+      }
       
       /* 見出しを少しだけ小さくして収まり良く */
       header h1 {
