--- a/ochiai/index.html
+++ b/ochiai/index.html
@@ -386,7 +386,10 @@
 
     /* === Mobile fixes: stop overlap between hero and first card === */
     @media (max-width: 640px) {
-
+/* ヒーローを少し高く＆余白を増やす */
+      header {
+        padding: 1rem;
+      }
     
 
       
